<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    app:cardCornerRadius="3dp"
    app:cardBackgroundColor="@color/dark_grey"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:id="@+id/title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/dialog_card_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="User Type"
                android:layout_weight="1"
                android:layout_marginBottom="8dp"
                android:textSize="15sp"
                android:textColor="@color/button_grey" />


        </LinearLayout>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/super_admin_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_grey"
                android:textColor="@color/light_grey"
                android:text="@string/super_admin" />
            <RadioButton
                android:id="@+id/admin_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_grey"
                android:textColor="@color/light_grey"
                android:text="@string/admin" />
            <RadioButton
                android:id="@+id/gold_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_grey"
                android:textColor="@color/light_grey"
                android:text="@string/gold"/>
            <RadioButton
                android:id="@+id/elite_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="@color/light_grey"
                android:textColor="@color/light_grey"
                android:text="@string/elite"/>
            <RadioButton
                android:id="@+id/user_radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user"
                android:buttonTint="@color/light_grey"
                android:textColor="@color/light_grey"
                android:layout_marginBottom="0dp"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="wrap_content"
                />
            <Button
                android:id="@+id/dialog_ok"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/ok"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="wrap_content"
                />
        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>
