<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginBottom="16dp"
    android:layout_marginLeft="16dp"
    app:cardCornerRadius="3dp"
    app:cardBackgroundColor="@color/dark_grey"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:foreground="?attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="32dp"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/dimen_16dp"
            >

            <TextView
                android:id="@+id/content_00"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/help_about_content_00"
                android:textColor="@color/button_grey"
                android:textSize="15sp"
                />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_11"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="details"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_11"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_01"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>


            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_33"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="package_variant"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_33"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_03"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_44"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="email"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_44"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_04"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>
            <TextView
                android:id="@+id/content_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:gravity="start"
                android:padding="10dp"
                android:text="@string/help_about_content_0"
                android:textColor="@color/button_grey"
                android:textSize="15sp"
                />

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_1"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="account"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_1"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_1"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="github_circle"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_2"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_2"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="package_variant"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_3"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:maxLines="1"
                        android:ellipsize="end"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_3"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>

            <com.balysv.materialripple.MaterialRippleLayout
                android:id="@+id/layout_4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                app:mrl_rippleAlpha="0.2"
                app:mrl_rippleColor="#0000ff"
                app:mrl_rippleHover="true"
                app:mrl_rippleOverlay="false">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <net.steamcrafted.materialiconlib.MaterialIconView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:scaleType="center"
                        app:materialIcon="email"
                        app:materialIconColor="@color/light_grey"
                        app:materialIconSize="24dp"
                        />

                    <TextView
                        android:id="@+id/content_4"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:gravity="start|center_vertical"
                        android:text="@string/help_about_content_4"
                        android:textColor="@color/light_grey"
                        />

                </LinearLayout>

            </com.balysv.materialripple.MaterialRippleLayout>
        </LinearLayout>
        </ScrollView>

            <Button
                android:id="@+id/dialog_cancel"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:textColor="@color/white"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_height="wrap_content"
                />

    </LinearLayout>
</android.support.v7.widget.CardView>
